fix singin page layout bug

--- a/0/public/css/common.css
+++ b/0/public/css/common.css
@@ -25,8 +25,7 @@ footer p{
   padding:5px 0 12px 10px
 }
 form.signup,form.signin{
-  margin: 100px auto;
-  max-width: 220px;
+  margin-top:10em;
 }
 .products .list .id{
   width:40px;
